--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon Marketing Homepage</title>
 </head>
 
 <body>
     <header> 
+        <!-- header is at the top of the page. contains company name and nav bar -->
         <h1>Hori<span class="seo">seo</span>n</h1>
+        <!-- replaced <div> with <nav> -->
         <nav>
             <ul>
+                <!-- unordered list of items in the nav bar. items link to their respective page positions -->
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
                 </li>
@@ -24,22 +27,28 @@
             </ul>
         </nav>
     </header>
+
     <section class="hero"></section>
+    <!-- replaced <div> with <section...> hero denotes the large image directly below the image-->
 
     
-    <!-- replaced <div> with <main>, denotes the main content area of the page -->
         
         <main class="content">
-            <main id="search-engine-optimization" 
-            class="search-engine-optimization">
-            <img src="./assets/images/search-engine-optimization.jpg" alt="notebook center with SEO written in it, from bottom left clockwise: coffee mug, laptop, magnifying glass, pens and markers" class="float-left" />
+            <!-- replaced <div> with <main>, denotes the main content area of the page -->
+                <main id="search-engine-optimization" 
+                class="search-engine-optimization">
+
+                <!--<main id="search-engine-optimization"...> tells the hyperlink in the header where to link to -->
+
+                <img src="./assets/images/search-engine-optimization.jpg" alt="notebook center with SEO written in it, from bottom left clockwise: coffee mug, laptop, magnifying glass, pens and markers" class="float-left" />
+                <!-- alt text added to images -->
+
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </main>
 
-        <!-- the <main id="search-engine-optimization"... tells the hyperlink where to go -->
 
         <main id="online-reputation-management" class="online-reputation-management">
             <img src="./assets/images/online-reputation-management.jpg" alt="user and laptop, on laptop is bargraph labeled 'Reputation'" class="float-right" />
@@ -62,26 +71,28 @@
     <aside class="benefits">
         <aside class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <img src="./assets/images/lead-generation.png" alt="sunrise over a down arrow pointed toward a coin" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </aside>
         <aside class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="lightbulb-head with a shirt and tie"/>
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </aside>
         <aside class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" />
+            <img src="./assets/images/cost-management.png" alt="coins in front of a gear" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </aside>
     </aside>
+
+    <!-- replaced <div> with <footer> this denotes the content that sits at the bottom of the page -->
     <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
